@@ -92,24 +92,24 @@
     { "type": "ENTER", "index": [79, "settings"] },
     { "_comment": "Changing Albert Search conditions", "type": "SET_KEY", "index": "startCondition", "content": "plot.shareholder >= 2000" },
     { "type": "SET_KEY", "index": "endCondition", "content": "plot.shareholder >= 2100" },
-    { "type": "ENTER", "index": 19 },
-    { "type": "SET_KEY", "index": "__INDEX__", "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.shareholder", "value": "2100" } },
+    { "type": "ENTER", "index": "event" },
+    { "type": "SET_KEY", "index": 19, "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.shareholder", "value": "2100" } },
     { "type": "EXIT" },
     { "type": "EXIT", "count": 2 },  
 
     { "type": "ENTER", "index": [80, "settings"] },
     { "_comment": "Changing Albert meeting conditions", "type": "SET_KEY", "index": "startCondition", "content": "plot.shareholder >= 2200" },
     { "type": "SET_KEY", "index": "endCondition", "content": "plot.shareholder >= 2300" },
-    { "type": "ENTER", "index": 113 },
-    { "type": "SET_KEY", "index": "__INDEX__", "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.shareholder", "value": "2400" } },
+    { "type": "ENTER", "index": "event" },
+    { "type": "SET_KEY", "index": 113, "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.shareholder", "value": "2400" } },
     { "type": "EXIT" },
     { "type": "EXIT", "count": 2 },  
 
     { "type": "ENTER", "index": [81, "settings"] },
     { "_comment": "Changing post-login after Albert meetup conditions", "type": "SET_KEY", "index": "startCondition", "content": "plot.shareholder >= 2400" },
     { "type": "SET_KEY", "index": "endCondition", "content": "plot.shareholder >= 2500" },
-    { "type": "ENTER", "index": 0 },
-    { "type": "SET_KEY", "index": "__INDEX__", "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.shareholder", "value": "2500" } },
+    { "type": "ENTER", "index": "event" },
+    { "type": "SET_KEY", "index": 0, "content": { "changeType": "set", "type": "CHANGE_VAR_NUMBER", "varName": "plot.shareholder", "value": "2500" } },
     { "type": "EXIT" },
     { "type": "EXIT", "count": 2 },  
 
